# stardew-i18n-translator

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SCOPE_GUARDRAILS.md  SECURITY.md  SPEC.md  SUPPORT.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci-docs.yml  ci.yml  pr-policy.yml  publish-nexus.yml  release.yml
distribution/: README.txt
distribution/Data/: README.txt
docs/adr/: 0000-adr-template.md  0001-tech-stack-decision.md
docs/agents/: README.md  antigravity-workflow.md  claude-code-workflow.md  codex-workflow.md  configurable-shortcuts-plan.md  design-parity-polish-plan.md  export-overwrite-confirmation-plan.md  handoff-template.md  inline-table-editing-plan.md  issue-triage-workflow.md  language-compatibility-plan.md  llm-batch-drag-drop-plan.md  llm-batch-rename-plan.md  logging-hotfix-plan.md  section-context-plan.md  settings-redesign-plan.md  setup-wizard-polish-plan.md  startup-auto-scan-plan.md  v1-release-audit-plan.md  v1-release-packaging-plan.md  v1.1-release-plan.md
docs/design/: README.md  full-design.dc.html  interactive-demo.dc.html  support.js
docs/development/: documentation-automation.md  language-compatibility.md  planning.md  project-status.md
docs/milestones/: m0-tech-stack-decision.md  m1-setup-mod-scan-import.md  m2-string-table-editor-validation.md  m3-export.md  m4-claude-code-batch.md  m4-llm-batch.md  m5-nexus-translation-download.md  m6-local-llm-translation.md
docs/release/: release-process.md  v1-audit-2026-06-12.md  v1.1.0.md  v1.1.1.md  v1.2.0.md  v1.2.1.md  v1.2.2.md  v1.2.3.md  v1.3.0.md  v1.4.0.md  v1.4.1.md
docs/research/: README.md  nexus-mods-strategy.md  reusable-from-old-project.md  stardew-smapi-i18n.md
docs/roadmap/: v1.1-candidates.md  v1.1-language-compatibility.md  v1.2-plan.md
scripts/: check-markdown-links.mjs  check-version-sync.mjs  create-draft-release.ps1  create-language-smoke-fixture.ps1  package-portable.ps1  set-version.mjs  test-create-draft-release.ps1  verify.ps1
src/: App.test.tsx  App.tsx  languages.test.ts  languages.ts  main.tsx  shortcuts.test.ts  shortcuts.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: batch.rs  detection.rs  export.rs  glossary.rs  lang_pack.rs  language_compatibility.rs  lib.rs  llm.rs  main.rs  release_zip.rs  scanner.rs  settings.rs  tokens.rs  translations.rs  xnb.rs
src/claude/: ClaudeBatchDialog.test.tsx  ClaudeBatchDialog.tsx
src/dashboard/: Dashboard.tsx
src/export/: ExportConfirmDialog.test.tsx  ExportConfirmDialog.tsx  ExportDialog.test.tsx  ExportDialog.tsx
src/llm-batch/: LlmBatchDialog.test.tsx  LlmBatchDialog.tsx  dragDrop.test.ts  dragDrop.ts
src/mods/: ModList.test.tsx  ModList.tsx  ScanDialog.test.tsx  (+1 more)
(+30 files in other folders)
