[package]
name = "stardew-i18n-translator"
version = "0.1.0"
description = "Local desktop tool for Stardew Valley / SMAPI mod i18n translations."
authors = ["Foxy1873"]
edition = "2021"

[lib]
name = "stardew_i18n_translator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

# Faster execution of large mod-folder scans even in dev builds.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
