[package]
name = "stardew-i18n-translator"
version = "1.1.1"
description = "Local desktop tool for Stardew Valley / SMAPI mod i18n translations."
authors = ["Nana"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Nana1873/stardew-i18n-translator"
edition = "2021"

[lib]
name = "stardew_i18n_translator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
# preserve_order: keep i18n key order from default.json (table display + export).
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.11"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
# Safe external-URL opening (ShellExecute, no shell parsing). The previous
# `cmd /C start <url>` would let cmd metacharacters in a URL execute commands.
tauri-plugin-opener = "2"
# Local-LLM client (M6): OpenAI-compatible HTTP only. rustls avoids an OpenSSL
# build dependency on Windows.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Diagnostic logging (v1.1.1): rotating local log file in the portable Data/logs
# folder so users can attach a log to a GitHub bug report. Local only — no
# network sink, consistent with the no-telemetry guarantee.
tauri-plugin-log = "2"
log = "0.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

# Faster execution of large mod-folder scans even in dev builds.
[profile.dev]
opt-level = 1
# opt-level > 0 + incremental on Windows can emit duplicate/garbled anon LLVM
# symbols, causing intermittent LNK2019/LNK2001 link failures that only a
# `cargo clean` clears. Disabling incremental for our (small) crate avoids it;
# dependencies compile non-incrementally anyway, so their cache is unaffected.
incremental = false

[profile.dev.package."*"]
opt-level = 3

# CI validates correctness and lints, but does not execute performance-sensitive
# workloads. Avoid the expensive dependency optimization used by local dev.
[profile.ci]
inherits = "dev"
opt-level = 0
debug = 0
incremental = false

[profile.ci.package."*"]
opt-level = 0
